pihole/statefulset/pihole.service.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp
  labels:
    app: pihole
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
  - protocol: TCP
    name: httptcp
    port: 80
    targetPort: http-web-svc
  - protocol: TCP
    name: dnstcp
    port: 53
    targetPort: dns-svc
  #externalIPs:
  #   - 192.168.1.39
  selector:
    app: pihole
