pihole/statefulset/pihole.service_udp.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp
  labels:
    app: pihole
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.186
  externalTrafficPolicy: Local
  ports:
  - protocol: UDP
    name: dnsudp
    port: 53
    targetPort: dns-udp
#  externalIPs:
#     - 192.168.1.39
  selector:
    app: pihole
